# chicago-invenio

./: .gitignore  .invenio  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
app_data/: vocabularies.yaml
app_data/vocabularies/: funders.yaml
assets/less/site/collections/: menu.overrides  message.variables
assets/less/site/elements/: button.variables  container.variables  input.overrides
assets/less/site/globals/: site.overrides  site.variables
assets/less/site/views/: item.variables
docker/nginx/: test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
site/: .gitkeep  pyproject.toml  setup.cfg
site/chicago_invenio/: views.py  webpack.py
site/chicago_invenio/auth/: oauth.py
site/chicago_invenio/config/: __init__.py  settings.py
templates/semantic-ui/invenio_app_rdm/: frontpage.html  header.html  page.html
