
[metadata]
name = chicago-invenio

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    chicago_invenio_views = chicago_invenio.views:create_blueprint
invenio_assets.webpack =
    chicago_invenio_theme = chicago_invenio.webpack:theme
